# crete-dev

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
back-end/: CMakeLists.txt
back-end/klee-1.3.0/: CMakeLists.txt
back-end/llvm-translator/: CMakeLists.txt
back-end/llvm-translator/llvm-translator-qemu-2.3/: crete_gen_links.sh  make_op_helper_bc.sh
front-end/: CMakeLists.txt
front-end/guest/util/: kprobe_module_generator
front-end/qemu-2.3/: Makefile.target  bc_softmmu_template.h  crete_make_bc_vd.sh  exec.c  make_bc_e1000.sh  make_target_i386_op_helper_bc.sh  softmmu_template.h  vl.c
front-end/qemu-2.3/runtime-dump/: bc_crete_dma.h  crete-debug.cpp  crete-debug.h  crete-fw-exec.cpp  crete-fw-exec.h  crete_tci.c  custom-instructions.cpp  runtime-dump.cpp  runtime-dump.h  tci_analyzer.cpp
front-end/qemu-2.3/target-i386/: bc_i386_helpers.c  bc_misc_helper.c  misc_helper.c
lib/: CMakeLists.txt
lib/cluster/: CMakeLists.txt  dispatch.cpp  test_pool.cpp  vm_node_fsm.cpp
lib/include/crete/: common.h  guest_data_post_exec.hpp  harness_config.h  kernel_api_resource_monitor.h  test_case.h
lib/replay-preload/: replay-preload.cpp
lib/stp/: CMakeLists.txt
lib/test-case/: tc_elem_checker.hpp  test_case.cpp
misc/scripts/angr-xml-ui/: angr-xml-ui.py  batch-angr-xml-ui.py
misc/scripts/replay/: auto_replay.sh  batch_replay.sh  br_coreutils.sh  br_ethtool.sh
misc/util/config-generator/: config-generator.cpp
misc/util/tc-replay/: CMakeLists.txt  c_file_ops.c  kernel_api_resource_checker.cpp  kernel_api_resource_checker.hpp  replay.cpp  replay.h
(+46 files in other folders)
